fix main and merge facilities part