@@ -5,8 +5,8 @@ import com.smartcampus.backend.service.OAuth2Service;
 import com.smartcampus.backend.service.TokenService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
@@ -15,17 +15,19 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
 public class SecurityConfig {
-    
+
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final OAuth2Service oAuth2Service;
     private final TokenService tokenService;
-    
+
     public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter,
                           OAuth2Service oAuth2Service,
                           TokenService tokenService) {
@@ -33,64 +35,78 @@ public class SecurityConfig {
         this.oAuth2Service = oAuth2Service;
         this.tokenService = tokenService;
     }
-    
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+
         http
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable())
             .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers("/api/auth/**", "/login/oauth2/**").permitAll()
                 .requestMatchers("/api/setup/**").permitAll()
                 .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                .requestMatchers("/api/user/me").authenticated()
-                .requestMatchers("/api/user/change-password").authenticated()
+                .requestMatchers("/api/user/**").authenticated()
                 .requestMatchers("/api/notifications/**").authenticated()
                 .anyRequest().authenticated()
             )
-            .oauth2Login(oauth2 -> oauth2
-                .successHandler((request, response, authentication) -> {
-                    org.springframework.security.oauth2.core.user.OAuth2User oAuth2User = 
-                        (org.springframework.security.oauth2.core.user.OAuth2User) authentication.getPrincipal();
-                    
+
+            // 🔥 FIXED OAuth2 BLOCK
+            .oauth2Login(oauth2 -> {
+                oauth2.successHandler((request, response, authentication) -> {
+
+                    var oAuth2User = (org.springframework.security.oauth2.core.user.OAuth2User) authentication.getPrincipal();
+
                     String email = oAuth2User.getAttribute("email");
                     String name = oAuth2User.getAttribute("name");
-                    
-                    com.smartcampus.backend.model.User user = oAuth2Service.findOrCreateUserFromOAuth(email, name);
+
+                    var user = oAuth2Service.findOrCreateUserFromOAuth(email, name);
                     String token = tokenService.generateToken(user);
-                    
-                    String redirectUrl = "http://localhost:5173/auth/callback?token=" + token + 
-                        "&user=" + java.net.URLEncoder.encode(
-                            String.format("{\"id\":\"%s\",\"name\":\"%s\",\"email\":\"%s\",\"role\":\"%s\"}",
-                                user.getId(), user.getName(), user.getEmail(), user.getRole()), 
-                            "UTF-8");
-                    
+
+                    String userJson = String.format(
+                        "{\"id\":\"%s\",\"name\":\"%s\",\"email\":\"%s\",\"role\":\"%s\"}",
+                        user.getId(),
+                        user.getName(),
+                        user.getEmail(),
+                        user.getRole()
+                    );
+
+                    String redirectUrl = "http://localhost:5173/auth/callback?token=" + token +
+                            "&user=" + URLEncoder.encode(userJson, StandardCharsets.UTF_8);
+
                     response.sendRedirect(redirectUrl);
-                })
-                .failureHandler((request, response, exception) -> {
+                });
+
+                oauth2.failureHandler((request, response, exception) -> {
                     String errorMessage = exception.getMessage();
-                    response.sendRedirect("http://localhost:5173/login?error=" + 
-                        java.net.URLEncoder.encode(errorMessage, "UTF-8"));
-                })
-            )
+
+                    String redirectUrl = "http://localhost:5173/login?error=" +
+                            URLEncoder.encode(errorMessage, StandardCharsets.UTF_8);
+
+                    response.sendRedirect(redirectUrl);
+                });
+            })
+
             .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-        
+
         return http.build();
     }
-    
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
+
         configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-        
+
         return source;
     }
 }
